# surgical-copilot

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/app/: main.py
apps/api/app/routers/: health.py  predictions.py  reference.py
apps/api/app/schemas/: prediction.py
apps/api/app/services/: prediction_service.py  reference_service.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/info/: page.tsx
apps/web/src/app/patients/: page.tsx
apps/web/src/components/: Header.tsx
apps/web/src/components/patients/: PatientForm.tsx  PredictionPanel.tsx
apps/web/src/lib/: api.ts
docs/: DATA_DICTIONARY.md  MODEL_CARD_TEMPLATE.md  PROJECT_BRIEF.md
notebooks/: 01_dataset_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  Data Preparation.ipynb  Machine Learning fail.ipynb  Machine Learning.ipynb  README.md
src/inspire_copilot/: config.py
src/inspire_copilot/data/: load.py
src/inspire_copilot/features/: build_preop_features.py
src/inspire_copilot/models/: evaluate.py  train.py
tests/: test_health.py
